tests/cases/standard-library/ok/input/prelude-read-line.ari
extern "C" fn puts(text: string) -> i32;

fn main() -> i64 {
  puts(read_line());
  puts(io::read_line());
  puts(input());
  puts(input::line());
  return 0;
}
