tests/cases/standard-library/errors/prelude/prelude-bare-without-std.ari
fn main() -> i64 {
  write_i64(1);
  return 0;
}
